--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,12 +6,12 @@
     <title>MyBrary</title>
 </head>
 <body>
-    
- before
- <br>
+ 
+ <%- include('../partials/header.ejs') %> 
+ <%- include('../partials/errorMessage.ejs') %> 
+
  <%- body %>   
-<br>
-After
+
 
 </body>
 </html>
